# ai-app-testing

./: .gitignore  README.md  pyproject.toml
src/: test.ipynb
